# spsqlite

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md  configure  configure.ac  configure.win
R/: SQLiteMap.R  hello.R  initSpatialExtension.R  testing.R  utils.R
data/: ORIGIN.txt
inst/: testing.R
inst/sqlimaps/: sids.db3
man/: SQLiteMap-package.Rd  hello_world.Rd  initSpatialExtension.Rd  is_spatial.Rd  lib_path.Rd  sqli.dump.Rd  sqli2map.Rd  sqli2sp.Rd
orphaned/: MD5  NAMESPACE  configure  configure.win
orphaned/inst/sqlimaps/: maps.sqlite
orphaned/man/: SQLiteMap-package.Rd  spatialite.init.Rd  sqli.dump.Rd  sqli2sp.Rd
src/: Makevars  Makevars.in  Makevars.win
tests/: test-all.R
tests/testthat/: test-init.R  test-query.R
